--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jsalarzaidev/expressNatours#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
