Connecting Database with the Express App

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=jsalarzai
-PASSWORD=123456 
+DATABASE=mongodb+srv://paddingbox:<PASSWORD>@azadcluster.yzkonau.mongodb.net/Natours?retryWrites=true&w=majority
+DATABASE_PASSWORD=Blu3M0n0DB;
