--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "learning node, express and MongoDb",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "express": "^4.18.2",
+    "mongoose": "^5.13.20",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
