--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "express": "^4.18.2",
     "mongoose": "^5.13.20",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
